# docker-examples

./: README.md
.github/workflows/: build-js.yml  build-py.yml
deploy/docker/: README.md  db.yml  docker-compose.yml  docker-proxy.yml  js-docker.yml  py-docker.yml  traefik.yml  watchtower-daily.yml  watchtower-webhook.yml
deploy/symlinks/: README.md  acme.json  config.json  dynamic.yml  traefik.yml
deploy/traefik/: dynamic.yml  traefik.yml
javascript/: README.md  package-lock.json
javascript/client/: package-lock.json
javascript/client/src/: App.vue
javascript/server/: app.js
javascript/server/public/: index.html
javascript/server/public/assets/: index-CUSJPgFo.js  index-CrZpBoD0.js
javascript/server/routes/: users.js
js-docker/: Dockerfile  docker-compose.yml
js-docker/client/: package.json
js-docker/server/: Dockerfile  compose.yaml  package-lock.json  package.json
js-docker/server/public/: index.html
js-docker/server/routes/: users.js
py-docker/: Dockerfile  README.md  docker-compose.yml
py-docker/client/: package.json
py-docker/server/: Dockerfile  compose.yaml  requirements.txt
py-docker/server/public/: index.html
py-docker/server/public/assets/: index-DxYPjyPj.js
py-docker/server/server/: __init__.py
python/: README.md  database.sql  docker-compose.yml
python/client/: vite.config.js
python/client/src/: App.vue
python/server/: pyproject.toml
python/server/server/: __init__.py
