[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Russell Feldhausen <russfeldh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
